# webrust

./: .gitignore  Cargo.toml  README.md  ci-conf.json
src/: api.rs  args.rs  conf.rs  main.rs  resources.rs
static/: pico.css  style.css
templates/: base.html  index.html  notification.html
