[package]
name = "webrust"
version = "0.1.1"
description = "Apivolve is an API evolution tool, it helps keep your APIs backwards compatible yet clean, and generates client/server code in a variety of languages."
edition = "2021"
publish = false
license = "Apache-2.0"
repository = "https://github.com/mverleg/webrust"

[[bin]]
name = "webrust"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.5", default-features = true, features = ["derive", "unicode"] }
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_info"] }
#tracing-timing = "0.6.0"
tracing-subscriber = { version = "0.3.17", features = ["time", "parking_lot", "env-filter", "fmt"] }
axum = { version = "0.6.18", features = ["http2", "multipart", "tracing"] }
tokio = { version = "1.28.0", features = ["full"] }
hyper = { version = "0.14.26", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
minify-html = "0.10.8"

#TODO @mark: unused, clean up:
regex = "1.8.1"
time = { version = "0.3.20", features = ["serde", "formatting"] }
itertools = "0.10.5"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
rand = "0.8.5"
sha2 = "0.10.6"
base64 = "0.21.0"
rayon = "1.7.0"
dashmap = "5.4.0"
css-minify = "0.3.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"

[profile.release]
lto = "thin"
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

